Bug 164564 - GIF doesn't render in Edit Mode with Skia/Raster and OSX rendering on MacOS, except when moving the mouse around
Summary: GIF doesn't render in Edit Mode with Skia/Raster and OSX rendering on MacOS, ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.8.0 target:25.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Images-Animated
  Show dependency treegraph
 
Reported: 2025-01-03 14:31 UTC by Telesto
Modified: 2025-02-26 22:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-01-03 14:31:07 UTC
Description:
GIF doesn't render in Edit Mode with Skia/Raster on MacOS, except when moving the mouse around

Steps to Reproduce:
1. Open attachment 159163 [details]

Actual Results:
Still image

Expected Results:
Animating GIF


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b68e8bc0303432625a87d6dd60d5e6c3de9be72
CPU threads: 8; OS: macOS 14.7.1; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Alex Thurgood 2025-01-03 17:13:18 UTC
Confirming with

Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 2f5e75ed134cfd0224e03411ca9d7d81f319c91b
CPU threads: 8; OS: macOS 15.2; UI render: Skia/Raster; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded


This is a regression over: 

Version: 24.8.3.2 (AARCH64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 8; OS: macOS 15.2; UI render: Skia/Raster; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 2 Telesto 2025-01-03 20:20:58 UTC
FWIW: similar issue at bug 160646 (but older and probably Windows 8.1 specific).
Comment 3 Patrick (volunteer) 2025-01-03 22:10:01 UTC
(In reply to Alex Thurgood from comment #1)
> Confirming with
> 
> Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
> Build ID: 2f5e75ed134cfd0224e03411ca9d7d81f319c91b
> CPU threads: 8; OS: macOS 15.2; UI render: Skia/Raster; VCL: osx
> Locale: fr-FR (fr_FR.UTF-8); UI: en-US
> Calc: threaded
> 
> 
> This is a regression over: 
> 
> Version: 24.8.3.2 (AARCH64) / LibreOffice Community
> Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
> CPU threads: 8; OS: macOS 15.2; UI render: Skia/Raster; VCL: osx
> Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
> Calc: threaded

Confirming with Skia disabled as well:

Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 04d39f6220113700adbfcb49928c482d0e14da42
CPU threads: 8; OS: macOS 15.2; UI render: default; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 4 Patrick (volunteer) 2025-01-04 01:52:23 UTC
Did a git bisect in my local master build and it looks like it is my bug:
 62baf23796132d6c0e17ae1ff37c3b9ee0556cf0 is the first bad commit
commit 62baf23796132d6c0e17ae1ff37c3b9ee0556cf0
Author: Patrick Luby <guibmacdev@gmail.com>
Date:   Tue Nov 5 19:51:55 2024 -0500

    tdf#163764 Force pending timers to run after marked text changes
Comment 5 Commit Notification 2025-01-04 16:43:27 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55f7845b9922e1dec3818579a4445e25a27c7e17

tdf#164564 don't stop the timer while waiting for a native event

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Patrick (volunteer) 2025-01-04 16:54:49 UTC
I have committed a fix for this bug that shouldn't break the fix tdf#163764. The fix will be in tomorrow's (05 January 2025) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 7 Commit Notification 2025-01-06 04:04:22 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5efbde4aa34dd6ec9c35e5aee838e961259c44d2

tdf#164564 don't stop the timer while waiting for a native event

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-01-06 04:04:26 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/32cac262affc67c3b1fdbf482fa361cd91385809

tdf#164564 don't stop the timer while waiting for a native event

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Alex Thurgood 2025-01-06 21:58:34 UTC
Verified in 
Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 022e95d39d9ae29496be0f81740eefaf515f578a
CPU threads: 8; OS: macOS 15.2; UI render: Skia/Metal; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

Thanks Patrick!