tdf#164564 don't stop the timer while waiting for a native event

Partially revert commit 62baf23796132d6c0e17ae1ff37c3b9ee0556cf0.
If only ImplGetSVData()->mpWinData->mbIsWaitingForNativeEvent is
true, stopping the timer will also stop animation when using
Skia/Raster or Skia is disabled.

Change-Id: I1d267625c4213687a5b98d0b073e8c9c345c2978
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179773
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>